samples/_failures_safe/1761394501_719248_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad1d4c39.c: In function ‘main’:
./samples/SAFE/__tmp_ad1d4c39.c:158:5: error: expected declaration or statement at end of input
  158 |     char input_buffer[4096];
      |     ^~~~
